<resources>
    <string name="app_name">StarlinuX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="sbc_name">Raspberry Pi</string>
    <string name="sbc_status_online">Online</string>
    <string name="sbc_status_offline">Offline</string>
    <string name="sbc_status_disconnected">Disconnected</string>

    <string name="vpn_section_name">Virtual Private Network (VPN)</string>
    <string name="port_forwarding_section_name">Port Forwarding</string>
    <string name="dmz_section_name">Demilitarized zone(DMZ)</string>
    <string name="ddns_section_name">Dynamic DNS (DDNS)</string>
    <string name="settings_section_name">Settings</string>
    <string name="support_section_name">Support</string>
    <string name="network_section_name">Network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_card_name">Title</string>
    <string name="description_card_name">Description</string>
    <string name="username_name">Username</string>
    <string name="system_board">Status</string>
    <string name="closed_angular_symbol">">"</string>
    <string name="system">System</string>
    <string name="memory">Memory</string>
    <string name="storage">Storage</string>
    <string name="support_page">For more information, visit <a href="https://github.com/davixdedem/StarlinuX">\nhttps://github.com/davixdedem/StarlinuX</a></string>
    <string name="support_welcome">
        Hey folks, I\'m Davide: a Software Engineer with a passion for Cyber Security coming from the beautiful country of Italy.\n\n

        My journey with <b>Starlink</b> began when I first heard about it and I was instantly captivated by the technology. The more I learned, the more fascinated I became, diving deep into the incredible world of <b>SpaceX</b>.\n\n

        Then, one day, an idea struck me! <i><b>What if I could harness the power of Linux to replace the Starlink router?</b></i>\n\n

        And so, <b>StarlinuX</b> was born!\n\n

        I hope you enjoy following along with this project. If you run into any issues, feel free to open a ticket. I\'d love to help out!
    </string>

    <string name="router_page">For more information, log into <a href="http://192.168.1.1">http://192.168.1.1</a>.</string>
    <string name="openvpn_page">For more information, visit <a href="http://192.168.1.1">OpenVPN For Android</a>.</string>
    <string name="dhcp_title">DHCP</string>
    <string name="dhcp6_title">DHCP6</string>
    <string name="vpn_title">OpenVPN</string>
    <string name="vpn_title_wireguard">Wireguard</string>
    <string name="connected_devices">Connected Devices</string>
    <string name="profiles">Profile</string>
    <string name="connection_title">Connection:</string>
    <string name="currently_no_devices_connected">Currently no devices connected.</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="connected">CONNECTED</string>
    <string name="loading_status">Trying to connect…</string>
    <string name="how_to_setup_a_ddns">Setting up a DDNS allows you to assign a static FQDN to your network.</string>
    <string name="setup_a_new_ddns_key">Setup a new DDNS key, you\'ll receive a <b>username</b> and <b>password</b>.</string>
    <string name="register_and_sign_up">Register and sign up at <a href="https://my.noip.com/">https://my.noip.com/</a>.</string>
    <string name="fill_out_the_form">Fill out the form below with the hostname and your <b>DDNS key</b> credentials.</string>
    <string name="port_forwarding_section">Port Forwarding</string>
    <string name="rules">RULES</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="no_active_rules">There are no rules at the moment.</string>
    <string name="add_a_new_rule">Add a new rule</string>
    <string name="a_short_and_sweet_story">A SHORT AND SWEET STORY</string>
    <string name="router">ROUTER</string>
    <string name="wireless">WIRELESS</string>
    <string name="pi_starlink">STARLINUX</string>
    <string name="Angular"><![CDATA[>]]></string>
    <string name="configuration">Configuration</string>
    <string name="external_port">External Port</string>
    <string name="target_ipv6">Target IPv6</string>
    <string name="destination_port">Destination Port</string>
    <string name="offline">OFFLINE</string>
    <string name="Changeable_credentials">Please note that username and password are changeable on the Router only, follow <a href="https://openwrt.org/docs/guide-user/troubleshooting/root_password_reset">instructions</a>.</string>
    <string name="about_openvpn">OpenVPN is an open-source VPN protocol that provides secure point-to-point or site-to-site connections. It uses SSL/TLS for key exchange, allowing encrypted data transfer over the internet. It\'s widely used for its flexibility, security, and support for various platforms.</string>
    <string name="about_wireguard">WireGuard is a modern, open-source VPN protocol designed for simplicity, speed, and security. It uses state-of-the-art cryptography, offering faster performance and more robust security compared to OpenVPN.</string>
    <string name="first_boot">First Boot</string>
    <string name="about_starlinux">Welcome to StarlinuX! \n\n This app requires an active <b>Starlink</b> Dish in <b>bypass mode</b>, \n be sure you\'ve already setup everything as explained at: \n <a href="https://github.com/davixdedem/StarlinuX">\nhttps://github.com/davixdedem/StarlinuX</a> \n</string>

</resources>